1.2v Bugs fixed: background picture on firefox can now display normally; time will stop after you win the game

--- a/puzzle.css
+++ b/puzzle.css
@@ -139,3 +139,22 @@ button:active {
 #shuffleButton:hover {
     transform: scale(1);
 }
+
+#origin {
+    background: url("pic/minions_2.jpg");
+    background-size: 300px 300px;
+    width: 300px;
+    height: 100px;
+    border: 3px solid #C5C5C5;
+    box-shadow: 0 0 0 0;
+    position: absolute;
+    top: -76px;
+    right: -300px;
+}
+
+#origin:hover {
+    background: url("pic/minions_2.jpg");
+    background-size: 300px 300px;
+    height: 300px;
+    transform: scale(1);
+}
